# openapi/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Midgard Public API
-  version: 2.1.4
+  version: 2.2.0
   contact:
     email: devs@thorchain.org
   description: >-
@@ -890,6 +890,8 @@ components:
         - assetPriceUSD
         - poolAPY
         - status
+        - liquidityUnits
+        - synthUnits
         - units
       properties:
         asset:
@@ -915,9 +917,15 @@ components:
         status:
           type: string
           description: The state of the pool, e.g. Available, Staged.
-        units:
+        liquidityUnits:
           type: string
           description: Int64, Liquidity Units in the pool.
+        synthUnits:
+          type: string
+          description: Int64, Synth Units in the pool.
+        units:
+          type: string
+          description: Int64, Total Units (synthUnits + liquidityUnits) in the pool.
 
     PoolStatsDetail:
       type: object
@@ -928,6 +936,8 @@ components:
         - assetPriceUSD
         - assetDepth
         - runeDepth
+        - liquidityUnits
+        - synthUnits
         - units
         - toAssetVolume
         - toRuneVolume
@@ -971,9 +981,15 @@ components:
         runeDepth:
           type: string
           description: Int64(e8), the amount of Rune in the pool
-        units:
+        synthUnits:
+          type: string
+          description: Int64, Synth Units in the pool
+        liquidityUnits:
           type: string
           description: Int64, Liquidity Units in the pool
+        units:
+          type: string
+          description: Int64, Total Units (synthUnits + liquidityUnits) in the pool
         toAssetVolume:
           type: string
           description: Int64(e8), same as history/swaps:toAssetVolume
@@ -1230,6 +1246,8 @@ components:
         - assetPrice
         - assetPriceUSD
         - liquidityUnits
+        - synthUnits
+        - units
       properties:
         startTime:
           type: string
@@ -1252,6 +1270,12 @@ components:
         liquidityUnits:
           type: string
           description: Int64, Liquidity Units in the pool at the end of the interval
+        synthUnits:
+          type: string
+          description: Int64, Synth Units in the pool at the end of the interval
+        units:
+          type: string
+          description: Int64, Total Units (synthUnits + liquidityUnits) in the pool at the end of the interval
 
     EarningsHistory:
       type: object
